2021-XX-XX   2.2.6:
-------------------


2021-08-07   2.2.5:
-------------------
  * speedup `find_bit()` and `find_last()` using uint64 checking, this means
    a speedup for `.find()`, `.index()`, `.search()` and `util.rindex()`
  * add optional start and stop arguments to `.bytereverse()`
  * add example to illustrate how
    [unaligned copying](../examples/copy_n.py) works internally.
  * add documentation
  * add tests


2021-07-29   2.2.4:
-------------------
  * use shift operations to speedup all unaligned copy operations, #142
  * expose functionality to Python level only in debug mode for testing
  * add and improve tests


2021-07-22   2.2.3:
-------------------
  * speedup `repeat()`, #136
  * speedup shift operations, #139
  * optimize slice assignment with negative step, e.g.: `a[::-1] = 1`
  * add tests


2021-07-16   2.2.2:
-------------------
  * speedup slice assignment, see #132 and #135
  * speedup bitwise operations, #133
  * optimize `getbit()` and `setbit()` in `bitarray.h`
  * fix TypeError messages when bitarray or int (0, 1) are expected (bool
    is a subclass of int)
  * add and improve tests


2021-07-06   2.2.1:
-------------------
  * improve documentation
  * speedup `vl_encode()`
  * `bitarray.h`: make `getbit()` always an (inline) function
  * add assertions in C code


2021-07-03   2.2.0:
-------------------
  * add `bitarray.util.vl_encode()` and `bitarray.util.vl_decode()` which
    uses a [variable length bitarray format](variable_length.rst), #131


2021-06-15   2.1.3:
-------------------
  * Fix building with MSVC / Bullseye, #129


2021-06-13   2.1.2:
-------------------
  * support type hinting for all Python 3 versions (that bitarray supports,
    3.5 and higher currently), fixed #128
  * add explicit endianness to two tests, fixes #127


2021-06-11   2.1.1:
-------------------
  * add type hinting (see PEP 484, 561) using stub (`.pyi`) files
  * add tests


2021-05-05   2.1.0:
-------------------